classDiagram
    class Task {
        +String name
        +String task_type
        +String pet_name
        +int duration_minutes
        +int priority
        +String preferred_time
        +String frequency
        +Optional~String~ start_time
        +Optional~String~ due_date
        +bool is_completed
        +set_priority(level: int)
        +set_duration(minutes: int)
        +mark_complete()
        +mark_incomplete()
        +get_details() dict
    }

    class ScheduledTask {
        +Task task
        +String pet_name
        +String reason
    }

    class Pet {
        +String name
        +int age
        +String pet_type
        +String gender
        +List~String~ medical_conditions
        +Optional~String~ insurance
        +List~Task~ tasks
        +add_task(task: Task)
        +remove_task(task_name: String)
        +get_tasks() List~Task~
        +get_medical_needs() List~String~
        +get_insurance_details() dict
    }

    class Owner {
        +String name
        +int age
        +String gender
        +int available_hours_per_day
        +dict preferences
        +List~Pet~ pets
        +set_preference(key: String, value: Any)
        +add_pet(pet: Pet)
        +remove_pet(pet_name: String)
        +get_pets() List~Pet~
        +get_available_time() int
    }

    class Scheduler {
        +Owner owner
        +String date
        +List~ScheduledTask~ daily_plan
        +add_task(pet: Pet, task: Task)
        +edit_task(pet_name: String, task_name: String, updates: dict)
        +complete_task(pet_name: String, task_name: String) Optional~Task~
        +prioritize_tasks(tasks: List~Task~) List~Task~
        +sort_by_time(tasks: List~Task~) List~Task~
        +filter_by_pet(pet_name: String) List~ScheduledTask~
        +filter_by_status(completed: bool) List~ScheduledTask~
        +detect_conflicts() List~String~
        +check_constraints(current_total: int, candidate: Task) bool
        +generate_plan(sort_mode: String) List~ScheduledTask~
        +display_plan()
        +explain_reasoning() String
    }

    Owner "1" --> "0..*" Pet : owns
    Pet "1" --> "0..*" Task : has
    Scheduler "1" --> "1" Owner : manages
    Scheduler "1" --> "0..*" ScheduledTask : produces
    ScheduledTask "1" --> "1" Task : wraps